Atualizar o index.html

--- a/painel/index.html
+++ b/painel/index.html
@@ -19,8 +19,11 @@
 
     <h2>Agendamentos</h2>
     <ul id="lista"></ul>
+
+    <div id="qrcode" style="margin-top: 20px;"></div>
   </div>
 
+  <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
